examples/positive/operators/prefix.glask
module Main where
{ class Num a
; instance Num Int

; class Fractional a
; instance Fractional Double


; prefix 7 |>
; prefix 2 ||>

; data Bool = False | True

; (|>) :: Int -> Bool
; (|>) i = True

; (||>) :: Bool -> Char
; (||>) b = 'a'




; program = ||> |> 23

}